# OneScience-examples

./: .gitignore  README.en.md  README.md
cfd/Transolver-RAE2822/: RAE2822.py  README.md  __init__.py  inference.py  train.py
earth/fuxi/: README.md
earth/pangu-fourcastnet-hybrid/: Agent_Output.md  Code.py  Question.md
models/AlphaFold3/: download.sh  infer.sh  metadata_model_files.yaml  run_alphafold.py  run_data_pipeline_jackhmmer.sh  run_data_pipeline_mmseqs.sh  run_inference_msa.sh
models/BENO/: README.md  onescience_run_manifest.yaml  slurm.sh  train.py
models/CFDBench/: README.md  slurm.sh
models/DeepCFD/: inference.py  run_deepcfd.ipynb  slurm.sh
models/DeepMD/: README.md  onescience_relations.yaml
models/ESM/: README.md
models/EagleMeshTransformer/: slurm.sh  train_graphvit.py
models/FengWu/: onescience_relations.yaml  onescience_run_manifest.yaml  train.py  work_slurm.sh
models/FourCastNet/: README.md
models/FuXi/: result.py  train_short.py  work_slurm.sh
models/GP_for_TO/: README.md  main_TO.py  onescience_relations.yaml
models/GraphCast/: README.md  finetune.py  inference.py  manifest.yaml  result.py  train.py  work_slurm.sh
models/LagrangianMGN/: onescience_relations.yaml  onescience_run_manifest.yaml  slurm.sh
models/MACE/: README.md  _parse_config.py  download.sh  run.sh  train.py
models/MatRIS/: README.md  manifest.yaml  test_modularization.py
models/MeshGraphNet/: onescience_relations.yaml  onescience_run_manifest.yaml  slurm.sh
models/OpenFold/: onescience_relations.yaml
models/PDENNEval/: README.md  onescience_run_manifest.yaml
models/PINNsformer/: manifest.yaml
models/Pangu_Weather/: README.md  inference.py  manifest.yaml  train.py  work_slurm.sh
models/ProteinMPNN/: checksums.sha256  configuration.json  download.sh
models/RFdiffusion/: download.sh  manifest.yaml  onescience_relations.yaml
models/SimpleFold/: MODEL_FILE_MANIFEST.tsv  README.md  onescience_relations.yaml  onescience_run_manifest.yaml  tokenize_data.py  train_fsdp.py  wrapper.py
models/Transolver-Airfoil-Design/: README.md  onescience_relations.yaml  requirements.txt  run_Transolver-Airfoil-Design.ipynb
models/Transolver-Car-Design/: README.md  download.sh
models/UMA/: README.md  manifest.yaml
models/Weather-R1/: download_data.py  run.sh
models/XiHe/: README_origin.md  inference.py  model_run_skill.md  onescience_relations.yaml
models/biosciences/AlphaFold3/flax_model/alphafold3/: CMakeLists.txt  README.md  __init__.py  _build.py  build_data.py  build_extension.py  jackhmmer_seq_limit.patch  package_config.py
models/biosciences/AlphaFold3/flax_model/alphafold3/common/: folding_input.py  resources.py
models/biosciences/AlphaFold3/flax_model/alphafold3/constants/: atom_types.py  chemical_component_sets.py  chemical_components.py  mmcif_names.py
models/biosciences/AlphaFold3/flax_model/alphafold3/constants/converters/: ccd_pickle_gen.py  chemical_component_sets_gen.py
models/biosciences/AlphaFold3/flax_model/alphafold3/data/: featurisation.py  msa.py  msa_config.py  msa_features.py  msa_store.py  parsers.py  pipeline.py  templates.py
models/biosciences/AlphaFold3/flax_model/alphafold3/data/tools/: hmmalign.py  hmmbuild.py  hmmsearch.py  jackhmmer.py  mmseqs.py  msa_tool.py  nhmmer.py  rdkit_utils.py  subprocess_utils.py
models/biosciences/AlphaFold3/flax_model/alphafold3/jax/attention/: attention.py  attention_base.py  flash_attention.py  xla_attention.py
models/biosciences/AlphaFold3/flax_model/alphafold3/jax/common/: triton_utils.py
models/biosciences/AlphaFold3/flax_model/alphafold3/jax/gated_linear_unit/: block.py  gated_linear_unit.py  matmul_ext.py
models/biosciences/AlphaFold3/flax_model/alphafold3/jax/geometry/: __init__.py  rigid_matrix_vector.py  rotation_matrix.py  vector.py
models/biosciences/AlphaFold3/flax_model/alphafold3/model/: confidence_types.py  confidences.py  data3.py  data_constants.py  feat_batch.py  features.py  merging_features.py  mmcif_metadata.py  model.py  model_config.py  msa_pairing.py  post_processing.py  protein_data_processing.py
models/biosciences/AlphaFold3/flax_model/alphafold3/model/atom_layout/: atom_layout.py
models/biosciences/AlphaFold3/flax_model/alphafold3/model/components/: mapping.py  utils.py
models/biosciences/AlphaFold3/flax_model/alphafold3/model/network/: atom_cross_attention.py  confidence_head.py  diffusion_head.py  diffusion_transformer.py  distogram_head.py  evoformer.py  featurization.py  modules.py  template_modules.py
models/biosciences/AlphaFold3/flax_model/alphafold3/model/pipeline/: inter_chain_bonds.py  pipeline.py  structure_cleaning.py
models/biosciences/AlphaFold3/flax_model/alphafold3/model/scoring/: chirality.py  covalent_bond_cleaning.py  scoring.py
models/biosciences/AlphaFold3/flax_model/alphafold3/parsers/cpp/: cif_dict_lib.cc
models/biosciences/AlphaFold3/flax_model/alphafold3/scripts/: copy_to_ssd.sh  gcp_mount_ssd.sh
models/biosciences/AlphaFold3/flax_model/alphafold3/structure/: __init__.py  bioassemblies.py  bonds.py  chemical_components.py  mmcif.py  parsing.py  sterics.py  structure.py  structure_tables.py  table.py  test_utils.py
models/biosciences/AlphaFold3/flax_model/alphafold3/structure/cpp/: mmcif_atom_site.pyi  mmcif_layout.pyi  mmcif_struct_conn.pyi  mmcif_utils.pyi
models/evo2/: README.md  (+6 more)
scripts/: modelscope_upload_cleanup.py
(+1793 files in other folders)
